--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
-#Logs
-logs
-*.logs
+node_modules
 
-#Node Modules
-frontend/node_modules
-backend/node_modules
-
-#Environment variables
-frontend/.env
-backend/.env
-
-.DS_Store
