--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ logs
 *.logs
 
 # Node Modules
-client/node_modules
-server/node_modules
+client/node_modules/
+server/node_modules/
 # Environment variables
 client/.env
 server/.env
+
+.DS_Store
